--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,13 @@
-minecraft_version=1.16.5
-yarn_mappings=1.16.5+build.10
+# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
+# This is required to provide enough memory for the Minecraft decompilation process.
+org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=false
+
+
+minecraft_version=1.19.2
+yarn_mappings=1.19.2+build.28
 loader_version=0.14.10
-fabric_version=0.42.0+1.16
+fabric_version=0.66.0+1.19.2
 
 maven_group = com.sekwah
 archives_base_name = infection
