--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ repositories {
 		name = 'ParchmentMC'
 		url = 'https://maven.parchmentmc.org'
 	}
+	maven { url "https://maven.shedaniel.me/" }
 }
 
 processResources {
@@ -37,4 +38,7 @@ dependencies {
 	}
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+
+	include "me.shedaniel.cloth:cloth-config-fabric:6.4.90"
+	modImplementation "me.shedaniel.cloth:cloth-config-fabric:6.4.90"
 }
